# one-site

./: .commitlintrc.yaml  .env  .env.test  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  manage.sh
.github/workflows/: lint.yaml  test.yaml
backend/: .gitignore  main.py  pyproject.toml  setup.cfg
backend/common/: constants.py  exceptions.py  messages.py
backend/common/core/: config.py  exceptions.py  extensions.py  log.py
backend/common/utils/: files.py  tools.py
backend/models/: __init__.py  user.py
backend/models/mixins/: __init__.py  time_stamp_mixin.py
backend/routers/: __init__.py  authentication.py  information.py  user.py
backend/schemas/: information.py  user.py
backend/tests/: conftest.py  test_main.py
backend/tests/common/core/: test_config.py  test_log.py
backend/tests/common/utils/: test_files.py  test_tools.py
frontend/: .editorconfig  .prettierignore  .prettierrc.yaml  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: App.spec.tsx
scripts/: constants.sh  functions.sh
